[package]
name = "mashlife_idek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
idek = { git = "https://github.com/Masterchef365/idek.git", rev = "6a5678f" }
mashlife = { path = "../mashlife" }
